# joy-capture-agent

./: Cargo.toml  README.md
.cargo/: config.toml
crates/joy-agentd/: Cargo.toml
crates/joy-agentd/src/: main.rs  serve.rs
crates/joy-agentd/ui/: dev.html
crates/joy-analysis/: Cargo.toml
crates/joy-analysis/src/: lib.rs
crates/joy-capture/: Cargo.toml
crates/joy-capture/src/: audio.rs  camera.rs  error.rs  lib.rs  microphone.rs  simulate.rs  video.rs
crates/joy-capture/tests/: simulate.rs
crates/joy-control/: Cargo.toml
crates/joy-control/src/: lib.rs
crates/joy-core/: Cargo.toml
crates/joy-core/src/: lib.rs  time.rs
crates/joy-ext/: Cargo.toml
crates/joy-ext/src/: lib.rs
crates/joy-media/: Cargo.toml
crates/joy-media/src/: convert.rs  error.rs  lib.rs  peer.rs
crates/joy-media/src/encode/: audio.rs  mod.rs  video.rs
crates/joy-media/src/signaling/: mod.rs  ws.rs
crates/joy-media/tests/: encode_smoke.rs  loopback.rs
crates/joy-provision/: Cargo.toml
crates/joy-provision/src/: lib.rs
crates/joy-store/: Cargo.toml
crates/joy-store/src/: lib.rs
extensions/: README.md
