[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/joy-org/joy-capture-agent"

[workspace.dependencies]
# External dependencies. Keep versions pinned here so every crate agrees.
tokio = { version = "1", default-features = false, features = ["sync", "time", "rt"] }
bytes = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
nokhwa = { version = "0.10", features = ["input-native"] }
cpal = "0.15"
ringbuf = "0.4"

joy-core = { path = "crates/joy-core" }
joy-capture = { path = "crates/joy-capture" }
joy-analysis = { path = "crates/joy-analysis" }
joy-media = { path = "crates/joy-media" }
joy-control = { path = "crates/joy-control" }
joy-provision = { path = "crates/joy-provision" }
joy-ext = { path = "crates/joy-ext" }
joy-store = { path = "crates/joy-store" }
