[package]
name = "joy-agentd"
description = "The Joy Capture Agent binary: wires every crate together, supervises the pipeline, and hosts the CLI/daemon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "joy-agentd"
path = "src/main.rs"

[features]
# Embeds the browser dev/test page and serves it at `GET /` in serve mode.
# Development-only: production builds omit the feature and the page (and its
# route) are compiled out entirely.
dev-ui = []

[dependencies]
joy-core.workspace = true
joy-capture = { workspace = true, features = ["camera", "microphone"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing-subscriber.workspace = true
axum.workspace = true
joy-analysis.workspace = true
joy-media.workspace = true
joy-control.workspace = true
joy-provision.workspace = true
joy-ext.workspace = true
joy-store.workspace = true
