[package]
name = "joy-analysis"
description = "Signal-processing analysis: motion detection and sound/voice-activity detection producing core.* events."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
joy-core.workspace = true
